--- a/app/src/main/res/layout/fragment_game_finished.xml
+++ b/app/src/main/res/layout/fragment_game_finished.xml
@@ -1,14 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/background_light"
     tools:context=".presentation.GameFinishedFragment">
-
-    <!-- TODO: Update blank fragment layout -->
+    
+    <ImageView
+        android:id="@+id/emoji_result"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="48dp"
+        android:contentDescription="Game Over"
+        app:layout_constraintBottom_toTopOf="@+id/tv_required_answers"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@drawable/ic_smile_2"
+        />
+    
     <TextView
+        android:id="@+id/tv_required_answers"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:text="Необходимое количество правильных ответов: %s"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_score_answers"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
+        />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/tv_score_answers"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Ваш счет: %s"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_required_percentage"
+        app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
+        app:layout_constraintStart_toStartOf="@id/tv_required_answers"
+        app:layout_constraintTop_toTopOf="@id/tv_required_answers"
+        />
+
+    <TextView
+        android:id="@+id/tv_required_percentage"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Необходимый процент правильных ответов: %s"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_score_percentage"
+        app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
+        app:layout_constraintStart_toStartOf="@id/tv_required_answers"
+        app:layout_constraintTop_toBottomOf="@id/tv_score_answers"
+        app:layout_constraintVertical_chainStyle="packed"
+        />
+
+    <TextView
+        android:id="@+id/tv_score_percentage"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Процент правильных ответов: %s"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
+        app:layout_constraintStart_toStartOf="@id/tv_required_answers"
+        app:layout_constraintTop_toBottomOf="@id/tv_required_percentage"
+        />
+    
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Попробовать снова"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
