--- a/app/src/main/res/layout/fragment_game_finished.xml
+++ b/app/src/main/res/layout/fragment_game_finished.xml
@@ -18,7 +18,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/ic_smile_2"
+        tools:srcCompat="@drawable/ic_smile"
         />
     
     <TextView
@@ -44,7 +44,7 @@
         app:layout_constraintBottom_toTopOf="@+id/tv_required_percentage"
         app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
         app:layout_constraintStart_toStartOf="@id/tv_required_answers"
-        app:layout_constraintTop_toTopOf="@id/tv_required_answers"
+        app:layout_constraintTop_toBottomOf="@id/tv_required_answers"
         />
 
     <TextView
