--- a/app/src/main/res/layout/fragment_game_finished.xml
+++ b/app/src/main/res/layout/fragment_game_finished.xml
@@ -75,6 +75,7 @@
         />
     
     <Button
+        android:id="@+id/button_retry"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Попробовать снова"
