--- a/app/src/main/res/layout/fragment_game_finished.xml
+++ b/app/src/main/res/layout/fragment_game_finished.xml
@@ -13,7 +13,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="48dp"
-        android:contentDescription="Game Over"
+        android:contentDescription="@string/game_over"
         app:layout_constraintBottom_toTopOf="@+id/tv_required_answers"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="Необходимое количество правильных ответов: %s"
+        android:text="@string/required_score"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/tv_score_answers"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,7 +39,7 @@
         android:id="@+id/tv_score_answers"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Ваш счет: %s"
+        android:text="@string/score_answers"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/tv_required_percentage"
         app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
@@ -52,7 +52,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Необходимый процент правильных ответов: %s"
+        android:text="@string/required_percentage"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/tv_score_percentage"
         app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
@@ -66,7 +66,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Процент правильных ответов: %s"
+        android:text="@string/score_percentage"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
@@ -78,7 +78,7 @@
         android:id="@+id/button_retry"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Попробовать снова"
+        android:text="@string/try_again"
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
